# elodie

./: .coveragerc  .coveralls.yml  .gitignore  .gitmodules  .pre-commit  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Dockerfile  README.md  Readme.md  adjust.py  api.py  api.spec  config.ini-sample  crawl_videos.py  elodie.py  elodie.spec  elodie_cli.py  filesystem.py  import.py  package.json  requirements-google.txt  requirements.txt  setup.cfg  setup.py  store_video.py  update.py
.circleci/: config.yml
.github/: FUNDING.yml
app/: README.md  Readme.md  app.js  index.js  package.json
app/html/: blank.html  config.html  index.html  location.html
app/modules/: broadcast.js  config.js  toolbar-ui.js
configs/: ExifTool_config
docs/: Makefile  conf.py  index.rst  requirements.txt
elodie/: arguments.py  compatability.py  compatibility.py  config.py  constants.py  dependencies.py  elodie.py  filesystem.py  geolocation.py  localstorage.py  log.py  plist_parser.py  result.py
elodie/closestgeoname/: .gitignore  LICENSE  README.md  closestgeoname.py
elodie/media/: __init__.py  audio.py  base.py  media.py  photo.py  text.py  video.py
elodie/plugins/: plugins.py
elodie/tests/: compatability_test.py  config_test.py  constants_test.py  dependencies_test.py  elodie_test.py  filesystem.py  filesystem_test.py  geolocation_test.py  helper.py  localstorage_test.py  log_test.py  plugins_test.py  requirements.txt  result_test.py  run_tests.py
elodie/tools/: add_original_name.py
scripts/: osx-import.scpt
tests/scripts/: datetime.py  geolocation.py
(+34 files in other folders)
