[metadata]
name = elodie
version = 1.0
summary = Your Personal EXIF-based Photo, Video and Audio Assistant.
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: End Users/Desktop
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Artistic Software
        Topic :: Multimedia :: Graphics
        Topic :: Multimedia :: Graphics :: Viewers
        Topic :: Multimedia :: Sound/Audio
        Topic :: Photography
        Topic :: Utilities

[files]
packages =
    elodie

[entry_points]
console_scripts =
    elodie = elodie.elodie:main

[backwards_compat]
include_package_data = true
